add umami analytics script

--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8" />
 		<!-- <link rel="icon" href="%sveltekit.assets%/favicon.png" /> -->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		
+		<script defer src="https://umami.ttools.io/script.js" data-website-id="372d12c0-913b-4e53-8c6b-ab1cc27c0259"></script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
